@@ -48,8 +48,10 @@
 ;; This makes screen output prettier:
 (setq *print-pretty* t)
 
+;; which browser do you use? (see `*browsers*' in clhs.lisp)
+;; (setq *browser* :mozilla-remote)
+
 ;; Common Lisp HyperSpec access
-(defvar *clhs-root-default*)
 (defun clhs-root ()
   "This returns the root URL for the Common Lisp HyperSpec.
 You can set the environment variable `CLHSROOT' or redefine this function
