@@ -53,8 +53,10 @@ if device and directory are unspecified.")
 ;; to your time zone.
 ;; (setq *default-time-zone* 0)
 
+;; which browser do you use? (see `*browsers*' in clhs.lisp)
+;; (setq *browser* :mozilla-remote)
+
 ;; Common Lisp HyperSpec access
-(defvar *clhs-root-default*)
 (defun clhs-root ()
   "This returns the root URL for the Common Lisp HyperSpec.
 You can set the environment variable `CLHSROOT' or redefine this function
